--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -27,5 +27,6 @@
   "click here to request another": "pulsa aquí para que te enviemos otro",
   "Edit": "Editar",
   "Posts": "Noticias",
-  "Create": "Crear"
+  "Create": "Crear",
+  "Pages": "Páginas"
 }
