--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -28,5 +28,8 @@
   "Edit": "Editar",
   "Posts": "Noticias",
   "Create": "Crear",
-  "Pages": "Páginas"
+  "Pages": "Páginas",
+  "Categories": "Categorías",
+  "Users": "Usuarios",
+  "Profile": "Perfil"
 }
