--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -31,5 +31,6 @@
   "Pages": "Páginas",
   "Categories": "Categorías",
   "Users": "Usuarios",
-  "Profile": "Perfil"
+  "Profile": "Perfil",
+  "Order": "Orden"
 }
