--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,30 +1,50 @@
 {
-  "E-Mail Address": "Correo electrónico",
-  "Password": "Contraseña",
-  "Remember Me": "Recuérdame",
-  "Login": "Acceder",
-  "Forgot Your Password?": "¿Olvidaste tu contraseña?",
-  "Register": "Registro",
-  "Name": "Nombre",
+  "A fresh verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su correo electrónico.",
+  "All rights reserved.": "Todos los derechos reservados.",
+  "Before proceeding, please check your email for a verification link.": "Antes de continuar, por favor, confirme su correo electrónico con el enlace de verificación que le fue enviado.",
+  "click here to request another": "haga clic aquí para solicitar otro",
   "Confirm Password": "Confirmar contraseña",
-  "Reset Password": "Reestablecer contraseña",
-  "Reset Password Notification": "Aviso para reestablecer contraseña",
-  "You are receiving this email because we received a password reset request for your account.": "Estás recibiendo este email porque se ha solicitado un cambio de contraseña para tu cuenta.",
-  "If you did not request a password reset, no further action is required.": "Si no has solicitado un cambio de contraseña, puedes ignorar o eliminar este e-mail.",
-  "Regards": "Saludos",
-  "Whoops!": "¡Ups!",
+  "E-Mail Address": "Correo electrónico",
+  "Error": "Error ",
+  "Forbidden": "Prohibido",
+  "Forgot Your Password?": "¿Olvidó su contraseña?",
+  "Go Home": "Ir a inicio",
   "Hello!": "¡Hola!",
-  "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "Si tienes problemas haciendo click en el botón \":actionText\", copia y pega el siguiente\nenlaenlace en tu navegador: [:actionURL](:actionURL)",
-  "Send Password Reset Link": "Enviar enlace para restablecer contraseña",
-  "Logout": "Cerrar sesión",
-  "Verify Email Address": "Confirmar correo electrónico",
-  "Please click the button below to verify your email address.": "Por favor pulsa el siguiente botón para confirmar tu correo electrónico.",
-  "If you did not create an account, no further action is required.": "Si no has creado ninguna cuenta, puedes ignorar o eliminar este e-mail.",
-  "Verify Your Email Address": "Confirma tu correo electrónico",
-  "A fresh verification link has been sent to your email address.": "Un nuevo link de verificación ha sido enviado a tu correo electrónico.",
-  "Before proceeding, please check your email for a verification link.": "Antes de poder continuar, por favor, confirma tu correo electrónico con el enlace que te hemos enviado.",
-  "If you did not receive the email": "Si no has recibido el email",
-  "click here to request another": "pulsa aquí para que te enviemos otro",
+  "hi": "hola",
+  "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no se requiere ninguna acción adicional.",
+  "If you did not receive the email": "Si no ha recibido el correo electrónico",
+  "If you did not request a password reset, no further action is required.": "Si no ha solicitado el restablecimiento de contraseña, omita este correo electrónico.",
+  "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "Si tiene problemas para hacer clic en el botón \":actionText\", copie y pegue la siguiente URL \nen su navegador web: [:actionURL](:actionURL)",
+  "Login": "Entrar",
+  "Logout": "Salir",
+  "Name": "Nombre",
+  "Oh no": "Oh no ",
+  "Page Expired": "Página Expirada",
+  "Page Not Found": "Página no encontrada",
+  "Password": "Contraseña",
+  "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
+  "Regards": "Saludos",
+  "Register": "Registrar",
+  "Remember Me": "Recuérdame",
+  "Reset Password": "Restablecer contraseña",
+  "Reset Password Notification": "Notificación de restablecimiento de contraseña",
+  "Send Password Reset Link": "Enviar enlace para restablecer la contraseña",
+  "Service Unavailable": "Servicio no disponible",
+  "Sorry, the page you are looking for could not be found.": "Lo sentimos, la página que está buscando no se pudo encontrar.",
+  "Sorry, you are forbidden from accessing this page.": "Lo sentimos, se le prohíbe el acceso a esta página.",
+  "Sorry, you are making too many requests to our servers.": "Lo sentimos, estás haciendo demasiadas peticiones a nuestros servidores.",
+  "Sorry, you are not authorized to access this page.": "Lo sentimos, no estás autorizado para acceder a esta página.",
+  "Sorry, your session has expired. Please refresh and try again.": "Lo sentimos, tu sesión ha expirado. Por favor, actualice y vuelva a intentarlo.",
+  "Sorry, we are doing some maintenance. Please check back soon.": "Lo sentimos, estamos haciendo un poco de mantenimiento. Por favor, vuelva pronto.",
+  "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña caducará en :count minutos.",
+  "Toggle navigation": "Activar navegación",
+  "Too Many Requests": "Demasiadas peticiones",
+  "Unauthorized": "No autorizado",
+  "Verify Email Address": "Confirma tu correo electrónico",
+  "Verify Your Email Address": "Verifica tu correo electrónico",
+  "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
+  "Whoops!": "¡Vaya!",
+  "Whoops, something went wrong on our servers.": "Vaya, algo salió mal en nuestros servidores.",
   "Edit": "Editar",
   "Posts": "Noticias",
   "Create": "Crear",
